Update src/main/java/de/tum/in/www1/artemis/service/metis/conversation/ConversationService.java
Co-authored-by: Moritz Aberle <102237363+ge65cer@users.noreply.github.com>